# Distributed-Systems

./: README.md
exercise1/src/: CMakeLists.txt  client.c  keys.c  keys.h  server.c
exercise2/: CMakeLists.txt  client.c  keys.c  server.c
exercise3/: CMakeLists.txt  client.c  keys.h  keys.x  keys_clnt.c  keys_server.c  keys_svc.c  keys_xdr.c  libkeys.c  libkeys.h
final_assignment/: CMakeLists.txt  client.py  server.c
